--- a/templates/THT/myservice-container-ansible.yaml.j2
+++ b/templates/THT/myservice-container-ansible.yaml.j2
@@ -8,55 +8,18 @@ description: Configure {{ myservice }} using ansible
 ###############################################################################
 
 parameters:
-  # These following parameters are needed by TripleO
-  EndpointMap:
-    default: {}
-    description: Mapping of service endpoint -> protocol. Typically set
-                 via parameter_defaults in the resource registry.
-    type: json
-  ServiceData:
-    default: {}
-    description: Dictionary packing service data
-    type: json
-  ServiceNetMap:
-    default: {}
-    description: Mapping of service_name -> network name. Typically set
-                 via parameter_defaults in the resource registry.  This
-                 mapping overrides those in ServiceNetMapDefaults.
-    type: json
-  DefaultPasswords:
-    default: {}
-    type: json
-  RoleName:
-    default: ''
-    description: Role name on which the service is applied
-    type: string
-  RoleParameters:
-    default: {}
-    description: Parameters specific to the role
-    type: json
-
-  # TODO: remove this comment
-  # These are passed through from THT
-  Container{{ myservice_titlecase }}Image:
-    description: image
-    type: string
-  Container{{ myservice_titlecase }}ConfigImage:
-    description: The container image to use for the {{ myservice }} config_volume
-    type: string
-
-  #############################################################################
-  # TODO: Add in the parameters from your existing heat templates here
-  #############################################################################
-
-  {# TODO: populate this with options pulled from myservice-container-puppet.yaml, if provided #}
+  {{ tht.parameters | to_nice_yaml(width=80, indent=2) | indent(width=2,indentfirst=true) }}
 
   ##############################################################################
-  # The existing collectd parameters should be combined with
-  # {{ myservice_titlecase }}Vars and all marked for deprecation.
-  # They will be accepted for backwards compatibility, but new deployments
-  # should add the vars directly into the {{ myservice_titlecase }}Vars
-  # parameter, which will not require anymore changes in THT to add new params.
+  # The existing collectd parameters will be combined with
+  # {{ myservice_titlecase }}Vars in the RoleParametersValue below. Eventually,
+  # these legacy parameters will be deprecated in favour of passing the
+  # parameters into the {{ myservice_titlecase }}Vars param below.
+  # For backwards compatibility these legacy params will be acceptd, but will
+  # be overwritten by any element passed to {{ myservice_titlecase }}.
+  # New configs should add the vars directly into the
+  # {{ myservice_titlecase }}Var parameter, which will not require anymore
+  # changes in THT to add new params.
   ##############################################################################
   {{ myservice_titlecase }}Vars:
     default: {}
@@ -81,10 +44,11 @@ resources:
           # {{ myservice}}-related parameters, using a new key that will be
           # available in the tripleo_{{myservice }} ansible role.
           #####################################################################
+#  TODO(efoley): add a loop here to add in existing params with a snakecase var#
           - legacy_param: { get_param: LegacyParam }
           #####################################################################
           # The last element should be the {{ myservice_titlecase }}Vars, which
-          # overides any previous deprecated metric.
+          # overides any of the legacy parameters.
           #####################################################################
           - { get_param: {{ myservice_titlecase }}Vars }
 
@@ -94,14 +58,15 @@ outputs:
     value:
       service_name: {{ myservice }}
       kolla_config:
-      # TODO(efoley): Does this need to be pushed to ansible?
-      # Leaving it here should be okay, and it should work as long as the
-      # files are in the right place on the host
+      # TODO: add in existing kolla config from tht.outputs.role_data.value.kolla_config
       docker_config:
         #######################################################################
         # TODO: Add in the docker_config section from the original
         # {{ myservice }}-container-puppet.yaml file
         #######################################################################
+
+## TODO(efoley): parse the tht.outputs.role_data.value.*_tasks and make a list of deploy_stages
+## Keep this here, but add the existing ansible stuff to the tripleo_{{myservice}} role tasks
 {% for deploy_stage in deploy_stages %}
       {{ deploy_stage }}:
         - name: "{{ myservice_titlecase }} {{ deploy_stage }} tasks"
